@@ -1,6 +1,7 @@
 gladedir 	 = $(datadir)/conglomerate/glade
 glade_DATA 	 = docbook-common-properties.glade \
-                   docbook-orderedlist-properties.glade
+                   docbook-orderedlist-properties.glade \
+                   cong-file-import.glade
 
 EXTRA_DIST = $(glade_DATA)
 
