@@ -1,3 +1,9 @@
+2003-09-06  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-file-import.c
+
+	Fix for bux #118769 - a new dialog to select importers if more than one is applicable
+
 2003-09-05  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-app.c, cong-app.h, main.c
